# BB2

./: .gitignore  Dockerfile  Layout (1).docx  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  binance_client.py  candle_tracker.py  config_manager.py  entry_conditions.py  main.py  market_scanner.py  risk_manager.py  state_manager.py  trade_history.py  trade_manager.py  web_server.py
web/: app.js  index.html  styles.css
