[project]
name = "binance-bot"
version = "1.0.0"
description = "Binance Spot Volume Breakout Trading Bot"
requires-python = ">=3.10"
dependencies = [
    "python-binance>=1.0.19",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]
